# quikarit

./: LICENSE.md  README.md  pyproject.toml  quikarit.py
quikarit/: calculus.py  core.py  statistics.py
workflows/: workflow.yml
